# tagcroft

./: .gitignore  .travis.yml  LICENSE  README.md  example.yaml  mp3chapter.py  pyproject.toml  requirements.txt  tagcroft.py  text_to_srt.py
